--- a/css/style.css
+++ b/css/style.css
@@ -127,3 +127,35 @@ img {
 /************************************************
     SOLUZIONE RESPONSIVE
  ************************************************/
+
+* {
+    overflow: auto;
+}
+
+/* TABLET */
+
+ @media screen and (max-width: 768px) {
+    .container {
+        width: 100%;
+    }
+
+}
+
+/* MOBILE */
+
+@media screen and (max-width: 480px) {
+
+    .row {
+        display: block;
+    }
+    
+    .lessons .col {
+        width: 100%;
+        padding-bottom: 10px;
+    }
+
+    .steps .col {
+        width: 100%;
+        padding-bottom: 10px;
+    }
+}
